--- a/GDemo/app/src/main/res/values-zh-rCN/strings.xml
+++ b/GDemo/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">小短片</string>
+    <string name="app_name">搞笑小短片</string>
     <string name="action_settings">Settings</string>
 </resources>
