--- a/GDemo/app/src/main/res/values/strings.xml
+++ b/GDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CoolGif</string>
     <string name="action_settings">Settings</string>
+    <string name="heart_gif">收藏的内容</string>
+    <string name="like_gif">点赞过的内容</string>
 </resources>
