--- a/GDemo/app/src/main/res/values-zh-rCN/strings.xml
+++ b/GDemo/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">搞笑小短片</string>
     <string name="action_settings">设置</string>
+    <string name="heart_gif">收藏的内容</string>
+    <string name="like_gif">点赞过的内容</string>
 </resources>
